# BenchMark

./: .env.example  .gitignore  CONTRIBUTING.md  DATA_CARD.md  EVAL_CARD.md  Makefile  README.md  RELEASE_CHECKLIST.md  pyproject.toml
.github/workflows/: tests.yml
baselines/: README.md
baselines/outputs/: azure_gpt54nano_clause_first_grade_results.json  azure_gpt54nano_clause_first_outputs.jsonl  azure_gpt54nano_event_graph_grade_results.json  azure_gpt54nano_event_graph_outputs.jsonl  azure_gpt54nano_naive_grade_results.json  azure_gpt54nano_naive_outputs.jsonl  azure_gpt54nano_naive_smoke.jsonl  fake_clause_first_grade_results.json  fake_clause_first_outputs.jsonl  fake_event_graph_grade_results.json  fake_event_graph_outputs.jsonl  fake_naive_outputs.jsonl  openai_gpt55_clause_first_grade_results.json  openai_gpt55_naive_grade_results.json  (+5 more)
data/: README.md
docs/: application_summary.md  architecture.md  data_design.md
reports/: failure_cases.md  leaderboard.json  leaderboard.md  mini_eval_report.md  real_model_eval_report.md  sample_grade_results.json
tender_timeline/: __init__.py  aggregate.py  attribution.py  calculator.py  citation_check.py  consistency.py  grade.py  grader.py  normalize.py  prompts.py  providers.py  report.py  run_matrix.py  run_model.py  schema.py  utils.py  validate_items.py
tests/: test_aggregate.py  test_attribution.py  test_calculator.py  test_citation_check.py  test_consistency.py  test_grader.py  test_normalize.py  test_report.py  test_run_matrix.py  test_run_model.py  test_schema.py  test_validate_items.py  test_verify_gold.py
(+15 files in other folders)
